--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ pandas==2.3.3
 scikit_learn==1.4.2
 seaborn==0.13.2
 shap==0.49.1
-streamlit==1.32.0
+streamlit>=1.38
 tensorflow==2.17.0
 xgboost==3.1.1
