--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-joblib==1.4.2
-lime==0.2.0.1
-matplotlib==3.8.4
-numpy>=2.1.0
-optuna==4.5.0
-pandas==2.3.3
-scikit_learn==1.4.2
-seaborn==0.13.2
-shap==0.49.1
+joblib>=1.4
+lime>=0.2.0.1
+matplotlib>=3.8,<3.9
+numpy>=1.26,<2
+optuna>=4.5
+pandas>=2.3,<2.4
+scikit-learn>=1.4,<1.5
+seaborn>=0.13
+shap>=0.49
 streamlit>=1.38
 tensorflow==2.20.0
-xgboost==3.1.1
+xgboost>=3.1
