--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 numpy>=1.26,<2.0
 pandas>=2.3,<2.4
 scikit-learn>=1.4,<1.5
-lime>=0.2.0.1
-shap>=0.42.1
-matplotlib>=3.8,<3.9
-optuna>=4.5
 tensorflow==2.20.0
-joblib>=1.4
+keras==3.12.0
+shap==0.49.1
+lime==0.2.0.1
+matplotlib>=3.8,<3.9
+seaborn==0.12.2
+streamlit==1.51.0
+joblib==1.5.2
